// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VDataTable.vue should match a snapshot - no data 1`] = `

<div>
  <div class="v-table__overflow">
    <table class="v-datatable v-table theme--light">
      <thead>
        <tr>
          <th role="columnheader"
              scope="col"
              aria-label="First Column: Sorted ascending. Activate to sort descending."
              aria-sort="ascending"
              tabindex="0"
              class="column sortable active asc text-xs-left a-string"
          >
            First Column
            <i aria-hidden="true"
               class="v-icon material-icons theme--light"
               style="font-size: 16px;"
            >
              arrow_upward
            </i>
          </th>
          <th role="columnheader"
              scope="col"
              aria-label="Second Column: Not sorted."
              aria-sort="none"
              class="column text-xs-left"
          >
            Second Column
          </th>
          <th role="columnheader"
              scope="col"
              aria-label="Third Column: Not sorted. Activate to sort ascending."
              aria-sort="none"
              tabindex="0"
              class="column sortable text-xs-left an array"
          >
            Third Column
            <i aria-hidden="true"
               class="v-icon material-icons theme--light"
               style="font-size: 16px;"
            >
              arrow_upward
            </i>
          </th>
        </tr>
        <tr class="v-datatable__progress">
          <th colspan="3"
              class="column"
          >
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td colspan="3"
              class="text-xs-center"
          >
            No data available
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <div class="v-datatable v-table theme--light">
    <div class="v-datatable__actions">
      <div class="v-datatable__actions__select">
        Rows per page:
        <div role="combobox"
             class="v-input v-text-field v-select v-input--hide-details theme--light"
        >
          <div class="v-input__control">
            <div class="v-input__slot">
              <div class="v-select__slot">
                <div class="v-select__selections">
                  <input aria-label="Rows per page:"
                         readonly="readonly"
                         type="text"
                         autocomplete="on"
                         aria-readonly="false"
                  >
                </div>
                <div class="v-input__append-inner">
                  <div class="v-input__icon v-input__icon--append">
                    <i aria-hidden="true"
                       class="v-icon material-icons theme--light"
                    >
                      arrow_drop_down
                    </i>
                  </div>
                </div>
              </div>
              <div class="v-menu">
                <div class="v-menu__content v-menu__content--auto theme--light "
                     style="max-height: 200px; min-width: 75px; max-width: auto; top: 12px; left: 12px; z-index: 0; display: none;"
                >
                  <div class="v-select-list v-card theme--light">
                    <div class="v-list theme--light">
                      <div>
                        <a class="v-list__tile v-list__tile--link theme--light">
                          <div class="v-list__tile__content">
                            <div class="v-list__tile__title">
                              5
                            </div>
                          </div>
                        </a>
                      </div>
                      <div>
                        <a class="v-list__tile v-list__tile--link theme--light">
                          <div class="v-list__tile__content">
                            <div class="v-list__tile__title">
                              10
                            </div>
                          </div>
                        </a>
                      </div>
                      <div>
                        <a class="v-list__tile v-list__tile--link theme--light">
                          <div class="v-list__tile__content">
                            <div class="v-list__tile__title">
                              25
                            </div>
                          </div>
                        </a>
                      </div>
                      <div>
                        <a class="v-list__tile v-list__tile--link theme--light">
                          <div class="v-list__tile__content">
                            <div class="v-list__tile__title">
                              All
                            </div>
                          </div>
                        </a>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div class="v-datatable__actions__range-controls">
        <div class="v-datatable__actions__pagination">
          –
        </div>
        <button disabled="disabled"
                type="button"
                class="v-btn v-btn--disabled v-btn--flat v-btn--icon theme--light"
                aria-label="Previous page"
        >
          <div class="v-btn__content">
            <i aria-hidden="true"
               class="v-icon material-icons theme--light"
            >
              chevron_left
            </i>
          </div>
        </button>
        <button disabled="disabled"
                type="button"
                class="v-btn v-btn--disabled v-btn--flat v-btn--icon theme--light"
                aria-label="Next page"
        >
          <div class="v-btn__content">
            <i aria-hidden="true"
               class="v-icon material-icons theme--light"
            >
              chevron_right
            </i>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>

`;

exports[`VDataTable.vue should match a snapshot - no matching results 1`] = `

<div>
  <div class="v-table__overflow">
    <table class="v-datatable v-table theme--light">
      <thead>
        <tr>
          <th role="columnheader"
              scope="col"
              aria-label="First Column: Sorted ascending. Activate to sort descending."
              aria-sort="ascending"
              tabindex="0"
              class="column sortable active asc text-xs-left a-string"
          >
            First Column
            <i aria-hidden="true"
               class="v-icon material-icons theme--light"
               style="font-size: 16px;"
            >
              arrow_upward
            </i>
          </th>
          <th role="columnheader"
              scope="col"
              aria-label="Second Column: Not sorted."
              aria-sort="none"
              class="column text-xs-left"
          >
            Second Column
          </th>
          <th role="columnheader"
              scope="col"
              aria-label="Third Column: Not sorted. Activate to sort ascending."
              aria-sort="none"
              tabindex="0"
              class="column sortable text-xs-left an array"
          >
            Third Column
            <i aria-hidden="true"
               class="v-icon material-icons theme--light"
               style="font-size: 16px;"
            >
              arrow_upward
            </i>
          </th>
        </tr>
        <tr class="v-datatable__progress">
          <th colspan="3"
              class="column"
          >
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td colspan="3"
              class="text-xs-center"
          >
            No matching records found
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <div class="v-datatable v-table theme--light">
    <div class="v-datatable__actions">
      <div class="v-datatable__actions__select">
        Rows per page:
        <div role="combobox"
             class="v-input v-text-field v-select v-input--hide-details theme--light"
        >
          <div class="v-input__control">
            <div class="v-input__slot">
              <div class="v-select__slot">
                <div class="v-select__selections">
                  <input aria-label="Rows per page:"
                         readonly="readonly"
                         type="text"
                         autocomplete="on"
                         aria-readonly="false"
                  >
                </div>
                <div class="v-input__append-inner">
                  <div class="v-input__icon v-input__icon--append">
                    <i aria-hidden="true"
                       class="v-icon material-icons theme--light"
                    >
                      arrow_drop_down
                    </i>
                  </div>
                </div>
              </div>
              <div class="v-menu">
                <div class="v-menu__content v-menu__content--auto theme--light "
                     style="max-height: 200px; min-width: 75px; max-width: auto; top: 12px; left: 12px; z-index: 0; display: none;"
                >
                  <div class="v-select-list v-card theme--light">
                    <div class="v-list theme--light">
                      <div>
                        <a class="v-list__tile v-list__tile--link theme--light">
                          <div class="v-list__tile__content">
                            <div class="v-list__tile__title">
                              5
                            </div>
                          </div>
                        </a>
                      </div>
                      <div>
                        <a class="v-list__tile v-list__tile--link theme--light">
                          <div class="v-list__tile__content">
                            <div class="v-list__tile__title">
                              10
                            </div>
                          </div>
                        </a>
                      </div>
                      <div>
                        <a class="v-list__tile v-list__tile--link theme--light">
                          <div class="v-list__tile__content">
                            <div class="v-list__tile__title">
                              25
                            </div>
                          </div>
                        </a>
                      </div>
                      <div>
                        <a class="v-list__tile v-list__tile--link theme--light">
                          <div class="v-list__tile__content">
                            <div class="v-list__tile__title">
                              All
                            </div>
                          </div>
                        </a>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div class="v-datatable__actions__range-controls">
        <div class="v-datatable__actions__pagination">
          –
        </div>
        <button disabled="disabled"
                type="button"
                class="v-btn v-btn--disabled v-btn--flat v-btn--icon theme--light"
                aria-label="Previous page"
        >
          <div class="v-btn__content">
            <i aria-hidden="true"
               class="v-icon material-icons theme--light"
            >
              chevron_left
            </i>
          </div>
        </button>
        <button disabled="disabled"
                type="button"
                class="v-btn v-btn--disabled v-btn--flat v-btn--icon theme--light"
                aria-label="Next page"
        >
          <div class="v-btn__content">
            <i aria-hidden="true"
               class="v-icon material-icons theme--light"
            >
              chevron_right
            </i>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>

`;

exports[`VDataTable.vue should match a snapshot - with data 1`] = `

<div>
  <div class="v-table__overflow">
    <table class="v-datatable v-table theme--light">
      <thead>
        <tr>
          <th role="columnheader"
              scope="col"
              aria-label="First Column: Sorted ascending. Activate to sort descending."
              aria-sort="ascending"
              tabindex="0"
              class="column sortable active asc text-xs-left a-string"
          >
            First Column
            <i aria-hidden="true"
               class="v-icon material-icons theme--light"
               style="font-size: 16px;"
            >
              arrow_upward
            </i>
          </th>
          <th role="columnheader"
              scope="col"
              aria-label="Second Column: Not sorted."
              aria-sort="none"
              class="column text-xs-left"
          >
            Second Column
          </th>
          <th role="columnheader"
              scope="col"
              aria-label="Third Column: Not sorted. Activate to sort ascending."
              aria-sort="none"
              tabindex="0"
              class="column sortable text-xs-left an array"
          >
            Third Column
            <i aria-hidden="true"
               class="v-icon material-icons theme--light"
               style="font-size: 16px;"
            >
              arrow_upward
            </i>
          </th>
        </tr>
        <tr class="v-datatable__progress">
          <th colspan="3"
              class="column"
          >
          </th>
        </tr>
      </thead>
      <tbody>
        <td>
          b
        </td>
        <td>
          c
        </td>
        <td>
          a
        </td>
      </tbody>
    </table>
  </div>
  <div class="v-datatable v-table theme--light">
    <div class="v-datatable__actions">
      <div class="v-datatable__actions__select">
        Rows per page:
        <div role="combobox"
             class="v-input v-text-field v-select v-input--hide-details theme--light"
        >
          <div class="v-input__control">
            <div class="v-input__slot">
              <div class="v-select__slot">
                <div class="v-select__selections">
                  <input aria-label="Rows per page:"
                         readonly="readonly"
                         type="text"
                         autocomplete="on"
                         aria-readonly="false"
                  >
                </div>
                <div class="v-input__append-inner">
                  <div class="v-input__icon v-input__icon--append">
                    <i aria-hidden="true"
                       class="v-icon material-icons theme--light"
                    >
                      arrow_drop_down
                    </i>
                  </div>
                </div>
              </div>
              <div class="v-menu">
                <div class="v-menu__content v-menu__content--auto theme--light "
                     style="max-height: 200px; min-width: 75px; max-width: auto; top: 12px; left: 12px; z-index: 0; display: none;"
                >
                  <div class="v-select-list v-card theme--light">
                    <div class="v-list theme--light">
                      <div>
                        <a class="v-list__tile v-list__tile--link theme--light">
                          <div class="v-list__tile__content">
                            <div class="v-list__tile__title">
                              5
                            </div>
                          </div>
                        </a>
                      </div>
                      <div>
                        <a class="v-list__tile v-list__tile--link theme--light">
                          <div class="v-list__tile__content">
                            <div class="v-list__tile__title">
                              10
                            </div>
                          </div>
                        </a>
                      </div>
                      <div>
                        <a class="v-list__tile v-list__tile--link theme--light">
                          <div class="v-list__tile__content">
                            <div class="v-list__tile__title">
                              25
                            </div>
                          </div>
                        </a>
                      </div>
                      <div>
                        <a class="v-list__tile v-list__tile--link theme--light">
                          <div class="v-list__tile__content">
                            <div class="v-list__tile__title">
                              All
                            </div>
                          </div>
                        </a>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div class="v-datatable__actions__range-controls">
        <div class="v-datatable__actions__pagination">
          1-3 of 3
        </div>
        <button disabled="disabled"
                type="button"
                class="v-btn v-btn--disabled v-btn--flat v-btn--icon theme--light"
                aria-label="Previous page"
        >
          <div class="v-btn__content">
            <i aria-hidden="true"
               class="v-icon material-icons theme--light"
            >
              chevron_left
            </i>
          </div>
        </button>
        <button disabled="disabled"
                type="button"
                class="v-btn v-btn--disabled v-btn--flat v-btn--icon theme--light"
                aria-label="Next page"
        >
          <div class="v-btn__content">
            <i aria-hidden="true"
               class="v-icon material-icons theme--light"
            >
              chevron_right
            </i>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>

`;

exports[`VDataTable.vue should match a snapshot with single rows-per-page-items 1`] = `

<div>
  <div class="v-table__overflow">
    <table class="v-datatable v-table theme--light">
      <thead>
        <tr>
          <th role="columnheader"
              scope="col"
              aria-label="First Column: Sorted ascending. Activate to sort descending."
              aria-sort="ascending"
              tabindex="0"
              class="column sortable active asc text-xs-left a-string"
          >
            First Column
            <i aria-hidden="true"
               class="v-icon material-icons theme--light"
               style="font-size: 16px;"
            >
              arrow_upward
            </i>
          </th>
          <th role="columnheader"
              scope="col"
              aria-label="Second Column: Not sorted."
              aria-sort="none"
              class="column text-xs-left"
          >
            Second Column
          </th>
          <th role="columnheader"
              scope="col"
              aria-label="Third Column: Not sorted. Activate to sort ascending."
              aria-sort="none"
              tabindex="0"
              class="column sortable text-xs-left an array"
          >
            Third Column
            <i aria-hidden="true"
               class="v-icon material-icons theme--light"
               style="font-size: 16px;"
            >
              arrow_upward
            </i>
          </th>
        </tr>
        <tr class="v-datatable__progress">
          <th colspan="3"
              class="column"
          >
          </th>
        </tr>
      </thead>
      <tbody>
      </tbody>
    </table>
  </div>
  <div class="v-datatable v-table theme--light">
    <div class="v-datatable__actions">
      <div class="v-datatable__actions__range-controls">
        <div class="v-datatable__actions__pagination">
          1-1 of 3
        </div>
        <button disabled="disabled"
                type="button"
                class="v-btn v-btn--disabled v-btn--flat v-btn--icon theme--light"
                aria-label="Previous page"
        >
          <div class="v-btn__content">
            <i aria-hidden="true"
               class="v-icon material-icons theme--light"
            >
              chevron_left
            </i>
          </div>
        </button>
        <button type="button"
                class="v-btn v-btn--flat v-btn--icon theme--light"
                aria-label="Next page"
        >
          <div class="v-btn__content">
            <i aria-hidden="true"
               class="v-icon material-icons theme--light"
            >
              chevron_right
            </i>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>

`;

exports[`VDataTable.vue should match display no-data-text when no data 1`] = `

<td colspan="3"
    class="text-xs-center"
>
  foo
</td>

`;

exports[`VDataTable.vue should match display no-results-text when no results 1`] = `

<td colspan="3"
    class="text-xs-center"
>
  bar
</td>

`;
